<resources>
    <string name="app_name">CRUD Testing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_update_button">Update</string>
    <string name="app_delete_button">Delete</string>
    <string name="app_add_contact_button">Add Contact</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First name</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>